# UI_based_on_ros

./: CMakeLists.txt  README.md  package.xml
include/msg/: main_window.hpp
msg/: info.msg
resources/: images.qrc
show_msg/include/msg/: qnode.hpp
show_msg/resources/: images.qrc
show_msg/src/: main_window.cpp
show_msg/ui/: main_window.ui
src/: main.cpp  main_window.cpp  pub_msg.cpp  qnode.cpp
ui/: main_window.ui
