<?xml version="1.0"?>
<package>
  <name>show_msg</name>
  <version>0.1.0</version>
  <description>

     show_msg

  </description>

  <maintainer email="zj@gmail.com">zj</maintainer>
  <author>zj</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>

<build_depend>message_generation</build_depend>
 <run_depend>message_runtime</run_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>


</package>
